<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_meal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="20dp"
android:background="@drawable/border_rounded"
android:padding="15dp"
android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="100"
    android:layout_marginBottom="10dp">


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/meal_card_img"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/meal_card_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text=""
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_meal_part_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:layout_gravity="center"
                android:gravity="fill_horizontal">
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_counter"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/meal_card_calories"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat_counter"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/meal_card_fats"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein_counter"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/meal_card_protein"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbonhydrates_counter"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/meal_card_carbonhydrates"
        android:layout_marginEnd="10dp"/>
</LinearLayout>
</LinearLayout>
