<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border_rounded"
    android:padding="15dp"
    android:orientation="vertical"
    android:onClick="onExampleCardClick">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="100"
    android:layout_marginBottom="10dp">


        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card_example_img"
            android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/card_example_title"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:layout_gravity="center"
                android:gravity="fill_horizontal">
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="50dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fried_eggs"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="50dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/sandwitch"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="50dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/tomatoes"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="50dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/salad"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_counter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="658"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat_counter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="125"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein_counter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="69"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbonhydrates_counter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="301"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>
