<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/meal_edit_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="4"
            android:id="@+id/meal_title"
            android:textColor="@color/black"
            android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded"
                    android:backgroundTint="@color/main"
                    android:text="+"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/choosePartsBtn"/>

                <ListView
                    android:id="@+id/parts_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="@dimen/big_margin"
                    android:descendantFocusability="beforeDescendants"
                   />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"

        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/calories_counter"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edit_panel_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Жиры: "
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/edit_panel_fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="298"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Белки: "
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/edit_panel_proteins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="882"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Углеводы: "
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/edit_panel_carbohydrates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="444"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/editSaveBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main"
                android:text="@string/save_button"
                android:textSize="13sp"
                android:onClick="onSaveBtnClick"/>

            <Button
                android:id="@+id/editPlanButton"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/third"
                android:text="@string/plan_button"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/editCancelBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:textSize="15sp"
                android:text="@string/cancel_button"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_choose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_choose_parts"
        android:visibility="invisible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>