<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border_rounded"
    android:paddingHorizontal="15dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:id="@+id/parts_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="100г: " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_counter" />

            <TextView
                android:id="@+id/part_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="658" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_counter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:id="@+id/part_fats"
                android:text="125" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein_counter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:id="@+id/part_protein"
                android:text="69" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbonhydrates_counter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="301"
                android:id="@+id/part_carbohydrates"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="г:"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/part_grams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLength="4"
                android:maxLines="1"
                android:text="248"
                android:textSize="17dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:weightSum="100"
        >


        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/part_image"
                android:scaleType="fitXY"
                android:src="@drawable/sandwitch"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/part_title"
                    android:text="Хлеб"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Текущий состав:"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="3">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calories_counter" />

                        <TextView
                            android:id="@+id/part_total_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" 658" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Жиры: " />

                        <TextView
                            android:id="@+id/part_total_fats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="125" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="3">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Белки: " />

                        <TextView
                            android:id="@+id/part_total_protein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" 658" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Углеводы: " />

                        <TextView
                            android:id="@+id/part_total_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="57" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
